cabal-version:      3.4
name:               aoc2022
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             John Cinnamond
maintainer:         john@cinnamond.me.uk
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared-properties
    build-depends:    base >= 4.14 && < 4.17

    default-language: Haskell2010
    ghc-options:      -Wall -Werror

executable day1
    import:           shared-properties
    hs-source-dirs:   day1
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0

executable day2
    import:           shared-properties
    hs-source-dirs:   day2
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0
    other-modules:    Shape
                    , Outcome

executable day3
    import:           shared-properties
    hs-source-dirs:   day3
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0
    other-modules:    Part1
                    , Part2
                    , Priorities
