cabal-version:      3.4
name:               aoc2022
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             John Cinnamond
maintainer:         john@cinnamond.me.uk
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared-properties
    build-depends:    base >= 4.14 && < 4.17

    default-language: Haskell2010
    ghc-options:      -Wall -Werror

executable day1
    import:           shared-properties
    hs-source-dirs:   day1
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0

executable day2
    import:           shared-properties
    hs-source-dirs:   day2
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0
    other-modules:    Shape
                    , Outcome

executable day3
    import:           shared-properties
    hs-source-dirs:   day3
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0
    other-modules:    Part1
                    , Part2
                    , Priorities
                    
executable day4
    import:           shared-properties
    hs-source-dirs:   day4
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0
    other-modules:    Part1
                    , Part2
                    , Parse

executable day5
    import:           shared-properties
    hs-source-dirs:   day5
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0
                    , extra ^>=1.7.12
    other-modules:    Part1
                    , Part2
                    , Parse

executable day6
    import:           shared-properties
    hs-source-dirs:   day6
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0
    other-modules:    Part1
                    , Part2

executable day7
    import:           shared-properties
    hs-source-dirs:   day7
    main-is:          Main.hs
    build-depends:    base ^>=4.16.3.0
                    , containers
    other-modules:    Part1
                    , Part2
                    , Parse
